--- a/css/_book-relateds.scss
+++ b/css/_book-relateds.scss
@@ -11,29 +11,69 @@
   }
 }
 
-.related-category {
-  margin:8px 0;
+.related-stacks-header {
+  position:relative;
 
   ul {
-    display:inline;
+    position:absolute;
+    right:0;
+    top:12px;
+    list-style:none;
   }
+
+  li {
+    float:left;
+    margin-left:5px;
+  }
+}
+
+.related-category {
+  margin:8px 0;
 
   li {
     display:inline-block;
     margin-bottom:5px;
   }
+}
+
+.subject-button {
+  font-size:11px;
+  text-transform:capitalize;
+  font-weight:700;
+
+  &.active {
+    background:$relatedCategoryBackground;
+    pointer-events:none;
+    cursor:default;
+  }
+}
+
+.single-subject {
+  display:inline-block;
+  background:$buttonDefaultBackground;
+  border:1px solid $buttonDefaultBorder;
+  border-radius:3px;
 
   a {
-    font-size:11px;
-    text-transform:capitalize;
-    font-weight:700;
+    text-decoration:none;
+    float:left;
+    padding:5px;
+    color:$buttonDefaultColor;
 
-    &.active {
-      background:$relatedCategoryBackground;
-      pointer-events:none;
-      cursor:default;
+    &:first-child {
+      border-right:1px solid $buttonDefaultHoverBackground;
+    }
+
+    &:hover, &:focus {
+      background:$buttonDefaultHoverBackground;
+      color:$buttonDefaultHoverColor;
+      border-color:$buttonDefaultHoverBorder;
     }
   }
+}
+
+.dpla-search {
+  font-family:'FontAwesome'
 }
 
 .subject-divider {
