Fix a few bugs with subject highlighting

--- a/app/templates/bookRelateds.html
+++ b/app/templates/bookRelateds.html
@@ -5,6 +5,7 @@
     <h2>Subjects</h2>
     <% if (subjects.length > 1) { %>
       <ul>
+        <li><a href="#" class="neighbors button qtip-me disabled" title="Books that appear on user shelves alongside this book">User Shelves</a></li>
         <li><a href="#" class="subject-union button qtip-me subject-button" title="Books that share at least one subject with this book">Expand</a></li>
         <li><a href="#" class="subject-intersection button qtip-me subject-button" title="Books that share every subject with this book">Focus</a></li>
       </ul>
@@ -16,8 +17,8 @@
       <ul>
         <% _.each(subjects, function(subject, index) { %>
           <li>
-            <span class="single-subject subject-button">
-              <a href="#" data-subject="<%= subject %>"><%= subject %></a>
+            <span class="single-subject">
+              <a href="#" class="single-subject-link subject-button" data-subject="<%= subject %>"><%= subject %></a>
               <a href="http://dp.la/search?utf8=✓&q=<%= encodeURIComponent(subject) %>" target="_blank" class="qtip-me dpla-search" title="Search the DPLA for <%= subject %>">&#xf002;</a>
             </span>
           </li>
@@ -25,9 +26,4 @@
       </ul>
     </div>
   <% } %>
-  <div class="related-category">
-    <ul>
-      <li><a href="#" class="neighbors button disabled" title="Books that appear on user shelves alongside this book">User Shelves</a></li>
-    </ul>
-  </div>
 </div>
