--- a/app/templates/bookRelateds.html
+++ b/app/templates/bookRelateds.html
@@ -3,7 +3,7 @@
 
   <div class="related-stacks-header">
     <h2>Subjects</h2>
-    <% if (subjects.length > 1) { %>
+    <% if (subjects && subjects.length > 1) { %>
       <ul>
         <li><a href="#" class="neighbors button qtip-me disabled" title="Books that appear on user shelves alongside this book">User Shelves</a></li>
         <li><a href="#" class="subject-union button qtip-me subject-button" title="Books that share at least one subject with this book">Expand</a></li>
