--- a/css/_colorsheet.scss
+++ b/css/_colorsheet.scss
@@ -89,6 +89,10 @@ $readBookBackgroundHover: $baseGreen;
 $relatedsBorder: $thinBlue;
 $relatedCategoryBackground: $baseOrange;
 
+$relatedNavBackground: $thickBlue;
+$relatedNavBackgroundHover: $baseBlue;
+$relatedNavBorder: $baseBlue;
+
 $reviewsListBorder: $thinBlue;
 $reviewBackground: transparentize($baseBlue, .9);
 
