--- a/css/styles.scss
+++ b/css/styles.scss
@@ -10,6 +10,9 @@
 @import "app-notify";
 @import "app-search";
 @import "book-relateds";
+@import "book-subjects";
+@import "dpla-detail";
+@import "dpla-related";
 @import "dropdown";
 @import "index";
 @import "modal";
