--- a/css/styles.css
+++ b/css/styles.css
@@ -139,12 +139,12 @@ input[type="submit"], button {
 a {
   color: #007acc; }
 
-.clearfix, .layout-wrapper {
+.clearfix, .layout-wrapper, .book-relateds-nav {
   *zoom: 1; }
-  .clearfix:before, .layout-wrapper:before, .clearfix:after, .layout-wrapper:after {
+  .clearfix:before, .layout-wrapper:before, .book-relateds-nav:before, .clearfix:after, .layout-wrapper:after, .book-relateds-nav:after {
     content: " ";
     display: table; }
-  .clearfix:after, .layout-wrapper:after {
+  .clearfix:after, .layout-wrapper:after, .book-relateds-nav:after {
     clear: both; }
 
 .app-container {
@@ -229,7 +229,8 @@ a, .button {
 .layout-column {
   float: left;
   width: 340px;
-  padding: 0 10px; }
+  padding: 0 10px;
+  min-height: 1px; }
 
 .app-confirm {
   width: 220px;
@@ -344,30 +345,58 @@ a, .button {
     border-radius: 0; }
 
 .book-relateds {
-  margin-top: 16px;
-  border-top: 1px solid rgba(0, 122, 204, 0.3); }
+  margin-top: 16px; }
 
-.related-stacks-nav h2 {
-  padding-top: 8px;
-  font-size: 24px;
-  font-weight: 100; }
-
-.related-stacks-header {
-  position: relative; }
-  .related-stacks-header ul {
-    position: absolute;
-    right: 0;
-    top: 12px;
-    list-style: none; }
-  .related-stacks-header li {
+.book-relateds-nav {
+  width: 338px;
+  border: 1px solid #007acc;
+  border-radius: 5px; }
+  .book-relateds-nav > li {
+    width: 112px;
     float: left;
-    margin-left: 5px; }
+    border-left: 1px solid #007acc; }
+    .book-relateds-nav > li:first-child {
+      border-left: 0; }
+  .book-relateds-nav a {
+    display: block;
+    padding: 3px;
+    text-align: center;
+    background: rgba(0, 122, 204, 0.7);
+    color: white;
+    font-weight: 700;
+    text-decoration: none;
+    position: relative; }
+    .book-relateds-nav a:hover, .book-relateds-nav a:focus, .book-relateds-nav a.active {
+      background: #007acc; }
+    .book-relateds-nav a.active {
+      pointer-events: none;
+      cursor: default; }
+      .book-relateds-nav a.active:after {
+        content: '';
+        position: absolute;
+        bottom: -11px;
+        left: 50%;
+        margin-left: -5px;
+        width: 0;
+        height: 0;
+        border: 5px solid transparent;
+        border-top-color: #007acc; }
 
-.related-category {
+.book-relateds-container {
+  margin-top: 16px; }
+
+.individual-subjects {
   margin: 8px 0; }
-  .related-category li {
+  .individual-subjects li {
     display: inline-block;
     margin-bottom: 5px; }
+
+.meta-subjects {
+  width: 100%;
+  overflow: hidden; }
+  .meta-subjects li {
+    float: left;
+    margin-right: 4px; }
 
 .subject-button {
   font-size: 11px;
@@ -400,16 +429,25 @@ a, .button {
   font-family: 'FontAwesome';
   font-size: 11px; }
 
-.subject-divider {
-  font-weight: 100;
-  padding: 0 5px;
-  color: rgba(0, 122, 204, 0.3); }
-
 .neighbors.disabled {
   pointer-events: none;
   cursor: default;
   background: #aaa;
   border-color: #999; }
+
+.dpla-detail img {
+  display: block; }
+
+.dpla-related {
+  width: 360px;
+  margin-left: -5px; }
+
+.view-dpla-item {
+  float: left;
+  text-decoration: none;
+  margin: 0 0 5px 5px; }
+  .view-dpla-item img {
+    display: block; }
 
 .dropdown {
   position: relative; }
@@ -586,8 +624,7 @@ a, .button {
 
 .reviews-list {
   padding-top: 16px;
-  margin: 0 0 16px 0;
-  border-top: 1px solid rgba(0, 122, 204, 0.3);
+  margin: 16px 0;
   position: relative; }
   .reviews-list h2 {
     font-size: 24px;
@@ -600,7 +637,8 @@ a, .button {
 .review {
   padding: 10px;
   margin-bottom: 16px;
-  background: rgba(0, 122, 204, 0.1); }
+  background: rgba(0, 122, 204, 0.1);
+  clear: both; }
   .review h3 {
     font-size: 18px;
     font-weight: bold;
@@ -624,10 +662,16 @@ a, .button {
     display: inline-block; }
 
 .average-rating {
-  position: absolute;
-  top: 30px;
-  right: 10px;
-  opacity: 0.5; }
+  float: right;
+  opacity: 0.5;
+  position: relative;
+  right: 10px; }
+  .average-rating:before {
+    content: 'Avg:';
+    font-family: 'Roboto', sans-serif;
+    padding-right: 5px;
+    font-size: 12px;
+    vertical-align: middle; }
 
 .review-comment {
   white-space: pre-wrap;
