--- a/css/_global.scss
+++ b/css/_global.scss
@@ -167,8 +167,10 @@ a {
 }
 
 a, .button {
-  -webkit-transition:all 300ms;
-  transition:all 300ms;
+  -webkit-transition-duration:300ms;
+  transition-duration:300ms;
+  -webkit-transition-property:color, background-color, opacity;
+  transition-property:color, background-color, opacity;
 }
 
 .loader {
