--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url(chosen/chosen.css);
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -210,8 +211,10 @@ a {
   height: 24px; }
 
 a, .button {
-  -webkit-transition: all 300ms;
-  transition: all 300ms; }
+  -webkit-transition-duration: 300ms;
+  transition-duration: 300ms;
+  -webkit-transition-property: color, background-color, opacity;
+  transition-property: color, background-color, opacity; }
 
 .loader {
   width: 100%;
@@ -438,16 +441,24 @@ a, .button {
 .dpla-detail img {
   display: block; }
 
+.dpla-loading:before {
+  content: "Loading…"; }
+
 .dpla-related {
   width: 360px;
   margin-left: -5px; }
+  .dpla-loading .dpla-related {
+    visibility: hidden; }
 
 .view-dpla-item {
   float: left;
   text-decoration: none;
-  margin: 0 0 5px 5px; }
+  margin: 0 0 5px 5px;
+  width: 110px; }
   .view-dpla-item img {
-    display: block; }
+    display: block;
+    width: 100%;
+    height: auto; }
 
 .dropdown {
   position: relative; }
