Link main related images to dpla, external icon to source record

--- a/app/templates/dplaRelated.html
+++ b/app/templates/dplaRelated.html
@@ -3,9 +3,12 @@
 <div class="dpla-related">
   <% if (items && items.length) { %>
     <% _.each(items, function(item) { %>
-      <a href="<%= item.isShownAt %>" target="_blank" class="qtip-me view-dpla-item" title="<%= item.sourceResource.title %>">
-        <img src="<%= item.object %>" alt="<%= item.sourceResource.title %>">
-      </a>
+      <div class="dpla-related-item">
+        <a href="http://dp.la/item/<%= item.id %>" target="_blank" class="qtip-me view-dpla-item" title='View "<%= item.sourceResource.title %>" on dp.la'>
+          <img src="<%= item.object %>" alt="<%= item.sourceResource.title %>">
+        </a>
+        <a href="<%= item.isShownAt %>" class="qtip-me view-source-item" title='View "<%= item.sourceResource.title %>" at <%= item.provider.name %>' target="_blank">&#xf08e;</a>
+      </div>
     <% }); %>
   <% } else { %>
     <p>No related DPLA images.</p>
