--- a/css/_dpla-related.scss
+++ b/css/_dpla-related.scss
@@ -13,11 +13,19 @@
   }
 }
 
-.view-dpla-item {
+.dpla-related-item {
   float:left;
-  text-decoration:none;
   margin:0 0 5px 5px;
   width:110px;
+  position:relative;
+
+  a {
+    text-decoration:none;
+  }
+}
+
+.view-dpla-item {
+  display:block;
 
   img {
     display:block;
@@ -26,3 +34,22 @@
   }
 }
 
+.view-source-item {
+  position:absolute;
+  z-index:1;
+  right:0;
+  top:0;
+  background:rgba(0,0,0,.7);
+  width:22px;
+  height:22px;
+  line-height:22px;
+  opacity:0;
+  font-family:'FontAwesome';
+  text-align:center;
+  font-size:12px;
+  color:$baseWhite;
+}
+
+.no-touch .dpla-related-item:hover .view-source-item {
+  opacity:1;
+}
