--- a/app/templates/dplaRelated.html
+++ b/app/templates/dplaRelated.html
@@ -11,6 +11,6 @@
       </div>
     <% }); %>
   <% } else { %>
-    <p>No related DPLA images.</p>
+    <p>No related DPLA items.</p>
   <% } %>
 </div>
