--- a/css/_book-subjects.scss
+++ b/css/_book-subjects.scss
@@ -1,5 +1,5 @@
 .individual-subjects {
-  margin:8px 0;
+  margin:12px 0;
 
   li {
     display:inline-block;
@@ -56,8 +56,41 @@
 }
 
 .dpla-search {
-  font-family:'FontAwesome';
-  font-size:11px;
+  font-family:serif;
+  font-size:8px;
+  font-weight:bold;
+
+  .single-subject & {
+    padding:2px 3px;
+  }
+  
+  span {
+    background:$thickWhite;
+    color:$baseBlue;
+    float:left;
+    height:8px;
+    width:8px;
+    line-height:9px;
+    padding:1px;
+    text-align:center;
+
+    &.l {
+      clear:left;
+      margin-right:1px;
+    }
+
+    &.d {
+      margin:0 1px 1px 0;
+    }
+
+    &.p {
+      margin-bottom:1px;
+    }
+  }
+
+  &:hover span {
+    background:$baseWhite;
+  }
 }
 
 .neighbors.disabled {
