--- a/css/_stackview-customizations.scss
+++ b/css/_stackview-customizations.scss
@@ -1,3 +1,27 @@
+@mixin rotate($deg) {
+  -webkit-transform:rotate($deg);
+  -moz-transform:rotate($deg);
+  -o-transform:rotate($deg);
+  -ms-transform:rotate($deg);
+  transform:rotate($deg);
+}
+
+@mixin transform-origin($val) {
+  -o-transform-origin:$val;
+  -ms-transform-origin:$val;
+  -moz-transform-origin:$val;
+  -webkit-transform-origin:$val;
+  transform-origin:$val;
+}
+
+@mixin skew($x, $y) {
+  -webkit-transform:skew($x, $y);
+  -moz-transform:skew($x, $y);
+  -o-transform:skew($x, $y);
+  -ms-transform:skew($x, $y);
+  transform:skew($x, $y);
+}
+
 .stack-wrapper {
   position:relative;
 }
@@ -39,4 +63,72 @@
     background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* IE10+ */
     background: linear-gradient(to bottom, rgba(255,255,255,1) 0%,rgba(255,255,255,0) 100%); /* W3C */
   }
+}
+
+.stack-dpla {
+  height:28px;
+  margin:0 0 1px 0;
+
+  > a {
+    border-left:4px solid #444;
+    border-right:4px solid #444;
+    border-top-width:1px;
+    border-bottom-width:1px;
+    border-style:solid;
+  }
+
+  .spine-text {
+    left:15px;
+    top:0;
+    bottom:0;
+    right:24px;
+    font-size:12px;
+    font-weight:bold;
+  }
+
+  .spine-title {
+    height:28px;
+    line-height:28px;
+  }
+}
+
+.dpla-edge {
+  position:absolute;
+  display:block;
+  z-index:2;
+  left:100%;
+  top:0;
+  bottom:-2px;
+  width:7px;
+  background:#adf;
+  @include transform-origin(0 100%);
+  @include skew(0deg, -20deg);
+}
+
+.dpla-cover {
+  position:absolute;
+  top:-4px;
+  height:2px;
+  left:0;
+  right:0;
+  border-style:solid;
+  border-width:1px;
+  border-radius:4px 4px 0 0;
+  @include transform-origin(0 100%);
+  @include skew(-70deg, 0deg);
+}
+
+.stack-dpla .spine-title:before {
+  font-family:'FontAwesome';
+  padding-right:5px;
+}
+
+.stack-image .spine-title:before {
+  content:'\f03e';
+}
+.stack-sound .spine-title:before {
+  content:'\f001';
+}
+.stack-movingimage .spine-title:before {
+  content:'\f03d';
 }
