--- a/app/templates/stackview-dpla.html
+++ b/app/templates/stackview-dpla.html
@@ -4,6 +4,6 @@
       <span class="spine-title"><%= title %></span>
     </span>
     <span class="dpla-edge"></span>
-    <span class="dpla-cover"></span>
+    <span class="stack-cover"></span>
   </a>
 </li>'
