--- a/css/_preview.scss
+++ b/css/_preview.scss
@@ -37,6 +37,7 @@
   border-radius:3px;
   margin-top:16px;
   word-wrap:break-word;
+  clear:both;
 
   .book-published, .book-source, .book-pub-date, .book-page-count {
     font-size:12px;
