--- a/css/_stackview-customizations.scss
+++ b/css/_stackview-customizations.scss
@@ -90,6 +90,19 @@
     height:28px;
     line-height:28px;
   }
+
+    .stack-cover {
+    position:absolute;
+    top:-4px;
+    height:2px;
+    left:0;
+    right:0;
+    border-style:solid;
+    border-width:1px;
+    border-radius:4px 4px 0 0;
+    @include transform-origin(0 100%);
+    @include skew(-70deg, 0deg);
+  }
 }
 
 .dpla-edge {
@@ -105,19 +118,6 @@
   @include skew(0deg, -20deg);
 }
 
-.dpla-cover {
-  position:absolute;
-  top:-4px;
-  height:2px;
-  left:0;
-  right:0;
-  border-style:solid;
-  border-width:1px;
-  border-radius:4px 4px 0 0;
-  @include transform-origin(0 100%);
-  @include skew(-70deg, 0deg);
-}
-
 .stack-dpla .spine-title:before {
   font-family:'FontAwesome';
   padding-right:5px;
@@ -131,4 +131,10 @@
 }
 .stack-movingimage .spine-title:before {
   content:'\f03d';
+}
+.stack-text .spine-title:before {
+  content:'\f0f6';
+}
+.stack-physicalobject .spine-title:before {
+  content:'\f0f7';
 }
